# torrent-save-location-tool

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  config.json  justfile  pyproject.toml  requirements.txt  torrent_save_locations.csv  torrent_save_locations.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: index.md  installation.md  usage.md
src/t_s_l_t/: __init__.py  __main__.py  cli.py  config.py
tests/: __init__.py  test_t_s_l_t.py
