[project]
name = "Torrent_Save_Location_Tool"
version = "0.1.0"
description = "Tool that checks the save location of all torrented media."
readme = "README.md"
authors = [
  {name = "Los", email = "lb562cali@icloud.com"}
]
maintainers = [
  {name = "Los", email = "lb562cali@icloud.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/LosMen562/t_s_l_t/issues"
changelog = "https://github.com/LosMen562/t_s_l_t/blob/master/changelog.md"
homepage = "https://github.com/LosMen562/t_s_l_t"

[project.scripts]
t_s_l_t = "t_s_l_t.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
